src/backend-vlc/vlcmediawidget.cpp
@@ -113,10 +113,6 @@ const char *vlcEventName(int event)
 		return "MediaListPlayerNextItemSet";
 	case libvlc_MediaListPlayerStopped:
 		return "MediaListPlayerStopped";
-	case libvlc_RendererDiscovererItemAdded:
-		return "RendererDiscovererItemAdded";
-	case libvlc_RendererDiscovererItemDeleted:
-		return "RendererDiscovererItemDeleted";
 	case libvlc_VlmMediaAdded:
 		return "VlmMediaAdded";
 	case libvlc_VlmMediaRemoved:
@@ -140,6 +136,10 @@ const char *vlcEventName(int event)
 	case libvlc_VlmMediaInstanceStatusError:
 		return "VlmMediaInstanceStatusError";
 #if LIBVLC_VERSION_MAJOR > 2
+	case libvlc_RendererDiscovererItemAdded:
+		return "RendererDiscovererItemAdded";
+	case libvlc_RendererDiscovererItemDeleted:
+		return "RendererDiscovererItemDeleted";
 	case libvlc_MediaPlayerAudioVolume:
 		return "MediaPlayerAudioVolume";
 	case libvlc_MediaPlayerAudioDevice:
@@ -171,17 +171,17 @@ VlcMediaWidget::VlcMediaWidget(QWidget *parent) : AbstractMediaWidget(parent),
     typeOfDevice(""), trackNumber(1), numTracks(1)
 {
 	libvlc_event_e events[] = {
-		libvlc_MediaMetaChanged,
 		libvlc_MediaPlayerEncounteredError,
 		libvlc_MediaPlayerEndReached,
 		libvlc_MediaPlayerLengthChanged,
 		libvlc_MediaPlayerSeekableChanged,
 		libvlc_MediaPlayerStopped,
+		libvlc_MediaPlayerTimeChanged,
 #if LIBVLC_VERSION_MAJOR > 2
+		libvlc_MediaMetaChanged,
 		libvlc_MediaPlayerESAdded,
 		libvlc_MediaPlayerESDeleted,
 #endif
-		libvlc_MediaPlayerTimeChanged,
 #if 0 // all other possible events
 		libvlc_MediaSubItemAdded,
 		libvlc_MediaDurationChanged,
@@ -558,6 +558,10 @@ void VlcMediaWidget::unregisterEvents()
 	for (int i = 0; i < eventType.size(); ++i)
 		libvlc_event_detach(eventManager, eventType.at(i),
 				    vlcEventHandler, this);
+#if LIBVLC_VERSION_MAJOR <= 2
+	libvlc_event_detach(eventManager, libvlc_MediaMetaChanged,
+			    vlcEventHandler, this);
+#endif
 }
 
 bool VlcMediaWidget::registerEvents()
@@ -577,6 +581,16 @@ int VlcMediaWidget::makePlay()
 		libvlc_media_player_stop(vlcMediaPlayer);
 		return -1;
 	}
+
+#if LIBVLC_VERSION_MAJOR <= 2
+	// For libVlc 2.x to work, we need to add the
+	// MediaMetaChanged event only here
+	if (libvlc_event_attach(eventManager, libvlc_MediaMetaChanged,
+				vlcEventHandler, this) != 0) {
+		qCWarning(logMediaWidget, "Cannot attach event handler %d",
+			  libvlc_MediaMetaChanged);
+	}
+#endif
 
 	libvlc_media_player_set_media(vlcMediaPlayer, vlcMedia);
 
